Used super switch instead of derivations.

--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -132,11 +132,11 @@ First, we construct a derivation scheme $\Psi$ that `glues together' any two ato
 %TODO: is it ok that the above derivation does not have a name?
 %TODO: define super switch or something equivalent
 %TODO: use double lines instead of dots and decide on a naming convention for repeated edges
-We use the above derivation and $sus$ (see Remark~\ref{RemSupSwitch}) to `move' an atom $a$ from one context $\zeta\vlhole$ to another context $\xi\vlhole$, again with an associated atomic flow that is free of vertices:
+We use the above derivation and $\supers$ (see Remark~\ref{RemSuperSwitch}) to `move' an atom $a$ from one context $\zeta\vlhole$ to another context $\xi\vlhole$, again with an associated atomic flow that is free of vertices:
 \[
 \vlder{}{\{\swi,\med\}}{\vls[(\xi\{a\}.\zeta\{\fff\}).\ttt]}
 {
- \vlsbr[\vlinf{sus}{}{\vls[\xi\{a\}.\zeta\{\fff\}]}{\vls(\xi\{\ttt\}.\zeta\{a\})}\;.\;\ttt]
+ \vlsbr[\vlinf{\supers}{}{\vls[\xi\{a\}.\zeta\{\fff\}]}{\vls(\xi\{\ttt\}.\zeta\{a\})}\;.\;\ttt]
 }
 \quad.
 \]
