--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -166,7 +166,7 @@ Using Lemma~\ref{LemSuperSwitch} apply the following transformations to each of 
 {
  \vlde{\Psi'}{}{\beta}
  {
-  \vlde{}{\{\swi\}}{\xi\vlsbr[a.{\bar a}]}
+  \vlin{\ssu}{}{\xi\vlsbr[a.{\bar a}]}
   {
    \vlhy{\vlsbr(\vlinf{}{}{\vls[a.{\bar a}]}{\ttt}\;\;.\;\;\vlder{\Psi}{}{\xi\{\ttt\}}{\alpha})}
   }
@@ -184,7 +184,7 @@ Using Lemma~\ref{LemSuperSwitch} apply the following transformations to each of 
 }\quad\rightarrow\quad
 \vlderivation
 {
- \vlde{}{\{\swi\}}{\vlsbr[\vlder{\Psi'}{}{\beta}{\xi\{\fff\}}\;\;.\;\;\vlinf{}{}{\fff}{\vls(a.{\bar a})}]}
+ \vlin{\ssd}{}{\vlsbr[\vlder{\Psi'}{}{\beta}{\xi\{\fff\}}\;\;.\;\;\vlinf{}{}{\fff}{\vls(a.{\bar a})}]}
  {
   \vlde{\Psi}{}{\xi\vlsbr(a.{\bar a})}
   {
