--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -668,60 +668,32 @@ where, for $1\le i\le n$, $\phi_i$ is a connected, non-weakly-cut-free subflow, 
 \[
 \atomicflow
 {
-(-17,16)*{\afvjd4{}{\lambda'_1}};
-(-17,10)*{\affr{6}{8}};
-(-17,10)*{\copy\contrup};
-(-17, 5)*{\afvjm{2}};
+(-18, 6)*{\afvjdm4{}{\boldsymbol{\lambda'_1}}};
+( -8, 8)*{\afawdm{}{}{}{}{}{}};
 (-18, 0)*{\affr{8}{8}};
+(-19, 2)*{\aflabelleft\ppl};
 (-17, 2)*{\aflabelright{\phi'_1}};
-(-21,-11)*{\afvjum{14}{\boldsymbol\iota'_1}{}};
-(-17,-10)*{\affr{6}{8}};
-(-17,-10)*{\copy\contrdown};
-(-17, -5)*{\afvjm{2}};
-%
-( -9,18)*{\afawd{}{}{}{}};
-( -9,10)*{\affr{6}{8}};
-( -9,10)*{\copy\contrup};
-( -9, 5)*{\afvjm{2}};
 ( -8, 0)*{\affr{8}{8}};
+( -9, 2)*{\aflabelleft\pmi};
 ( -7, 2)*{\aflabelright{\phi''_1}};
-( -9,-10)*{\affr{6}{8}};
-( -9,-10)*{\copy\contrdown};
-( -9, -5)*{\afvjm{2}};
-( -5,-11)*{\afvjum{14}{}{\boldsymbol\iota''_1}};
-( -8, 0)*{\affr{8}{8}};
-%
-(-13,-18)*{\afaiuex{}{}{}{}{}{}21};
+( -6,-9)*{\afvjum{10}{}{\boldsymbol\iota''_1}};
+(-13,-8)*{\afaium{}{}{}{}{}{}};
+(-20,-9)*{\afvjum{10}{\boldsymbol\iota'_1}{}};
 %------------
 (0,0)*{\cdots};
 %------------
-( 9,16)*{\afvjd4{}{\lambda'_n}};
-( 9,10)*{\affr{6}{8}};
-( 9,10)*{\copy\contrup};
-( 9, 5)*{\afvjm{2}};
+( 8, 6)*{\afvjdm4{}{\boldsymbol{\lambda'_n}}};
+(18, 8)*{\afawdm{}{}{}{}{}{}};
 ( 8, 0)*{\affr{8}{8}};
+( 7, 2)*{\aflabelleft\ppl};
 ( 9, 2)*{\aflabelright{\phi'_n}};
-( 9,-10)*{\affr{6}{8}};
-( 9,-10)*{\copy\contrdown};
-( 9, -5)*{\afvjm{2}};
-( 5,-11)*{\afvjum{14}{\boldsymbol\iota'_n}{}};
-( 8, 0)*{\affr{8}{8}};
-%
-(17,18)*{\afawd{}{}{}{}};
-(17,10)*{\affr{6}{8}};
-(17,10)*{\copy\contrup};
-(17, 5)*{\afvjm{2}};
 (18, 0)*{\affr{8}{8}};
+(17, 2)*{\aflabelleft\pmi};
 (19, 2)*{\aflabelright{\phi''_n}};
-(21,-11)*{\afvjum{14}{}{\boldsymbol\iota''_n}};
-(17,-10)*{\affr{6}{8}};
-(17,-10)*{\copy\contrdown};
-(17, -5)*{\afvjm{2}};
-%
-(13,-18)*{\afaiuex{}{}{}{}{}{}21};
-%---------
-(  35,18)*{\invisiblemark};
-%---
+( 6,-9)*{\afvjum{10}{\boldsymbol\iota'_n}{}};
+(13,-8)*{\afaium{}{}{}{}{}{}};
+(20,-9)*{\afvjum{10}{}{\boldsymbol\iota''_n}};
+%------------
 (  35, 6)*{\affr{18}8};
 (41.5, 8)*{\aflabelright{\psi_1}};
 (  30, 6)*{\copy\contrup};
@@ -744,8 +716,8 @@ where, for $1\le i\le n$, $\phi_i$ is a connected, non-weakly-cut-free subflow, 
 (  45,-6)*{\copy\weakup};
 (  50,-6)*{\copy\contrdown};
 %---
-( 45,-14)*{\afvjm8};
+( 45,-12)*{\afvjm4};
 }\quad.
 \]
-For every $1\le i\le n$, the \emph{new upper edge of} $\phi'_i$ is $\lambda'_i$.
+For every $1\le i\le n$, the \emph{new upper edges of} $\phi_i$ are $\boldsymbol{\lambda'_i}$.
 \end{definition}
