--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -280,20 +280,57 @@ Given a derivation $\Phi$, the core of $\Phi$ obtained as described in the proof
 \begin{definition}\label{DefDerExp}
 Given a proof $\vlproof{\Pi}{}{\alpha}$ with associated atomic flow $\phi$ and a polarity assignment, $\pi$, to $\phi$, such that $\phi_1$, $\dots$, $\phi_n$ are all the non-weakly-cut-free, connected subflows of $\phi$, an \emph{experiment on\/ $\Pi$ with respect to $\pi$} is defined to be a derivation
 \[
-\vlder{}{}{\beta}{\vls(a^{\lambda'_1}_1.\cdots.a^{\lambda'_n}_n.\alpha)}
+\vlder{}{}{\beta}{\vlsmallbrackets\vls((a^{\lambda'_{1,1}}_1.\cdots.a^{\lambda'_{1,k_1}}_1).\cdots.(a^{\lambda'_{n,1}}_n.\cdots.a^{\lambda'_{n,k_n}}_n).\alpha)}
 \]
-with associated atomic flow $\Exp(\phi,\pi)$, such that, for every $1\le i\le n$, $\lambda'_i$ is the new upper edge of $\phi_i$.
+with associated atomic flow $\Exp(\phi,\pi)$, such that, for every $1\le i\le n$, $\lambda'_{i,1}$, $\dots$, $\lambda'_{i,k_i}$ are the new upper edges of $\phi_i$.
 \end{definition}
 
 \TODO{Update statement of theorem and proof to reflect the new definition.}
 
 \begin{theorem}\label{ThmExistExp}
-Given a proof $\vlproof{\Pi}{}{\alpha}$ with associated atomic flow $\phi$ and a polarity assignment, $\pi$, to $\phi$, such that $\phi_1$, $\dots$, $\phi_n$ are all the non-weakly-cut-free, connected subflows of $\phi$, an experiment on $\Pi$ with respect to $\pi$ can be constructed.
+Given a proof $\vlproof{\Pi}{}{\alpha}$ with associated atomic flow $\phi$ and a polarity assignment, $\pi$, to $\phi$, an experiment on $\Pi$ with respect to $\pi$ can be constructed.
 \end{theorem}
 
 \begin{proof}
+Let $\phi_1$, $\dots$, $\phi_n$ be all the non-weakly-cut-free, connected subflows of $\phi$ and, for every $1\le i\le n$, let $\lambda'_{i,1}$, $\dots$, $\lambda'_{i,k_i}$ be the new upper edges of $\phi_i$. Obtain $\Pi'$ from $\Pi$ by Lemma~\ref{LemDecompInt}:
 \[
-\vlder{\Core(\Pi)}{}{\vls[\beta.\vlinf{}{}{\fff}{\vls(a^{\mu'_1}_1.\bar a^{\mu''_1}_1)}.\cdots.\vlinf{}{}{\fff}{\vls(a^{\mu'_n}_n.\bar a^{\mu''_n}_n)}]}{\vls([a^{\lambda'_1}_1.\vlinf{}{}{\bar a_1}{\fff}].\cdots.[a_n^{\lambda'_n}.\vlinf{}{}{\bar a_n}{\fff}])}\quad,
+\vlder{\Pi'}{\SKS\setminus\{\aid\}}{\alpha}
+{
+ \vlsbr
+ (
+  (
+   \vlinf{}{}{\vls[a_1^{\lambda'_{1,1}}.\bar a_1]}{\ttt}
+  \;.\;\cdots\;.\;
+   \vlinf{}{}{\vls[a_1^{\lambda'_{1,k_1}}.\bar a_1]}{\ttt}
+  )
+ \;.\;\cdots\;.\;
+  (
+   \vlinf{}{}{\vls[a_n^{\lambda'_{n,1}}.\bar a_n]}{\ttt}
+  \;.\;\cdots\;.\;
+   \vlinf{}{}{\vls[a_n^{\lambda'_{n,k_n}}.\bar a_n]}{\ttt}
+  )
+ )
+}\quad,
+\]
+with atomic flow $\phi$. For every $1\le i\le n$ and every $1\le j\le k_i$, substitute $\vlinf{}{}{\vls[a_i^{\lambda'_{i,j}}.\bar a_i]}{\ttt}$ with $\vlsbr[a_i^{\lambda'_{i,j}}.\vlinf{}{}{\bar a_i}{\fff}]$ in $\Pi'$ to obtain a derivation with atomic flow $\Exp(\phi,\pi)$:
+\[
+\vlder{}{}{\alpha}
+{
+ \vlsbr
+ (
+  (
+   [a_1^{\lambda'_{1,1}}.\vlinf{}{}{\bar a_1}{\fff}]
+  \;.\;\cdots\;.\;
+   [a_1^{\lambda'_{1,k_1}}.\vlinf{}{}{\bar a_1}{\fff}]
+  )
+ \;.\;\cdots\;.\;
+  (
+   [a_n^{\lambda'_{n,1}}.\vlinf{}{}{\bar a_n}{\fff}]
+  \;.\;\cdots\;.\;
+   [a_n^{\lambda'_{n,k_n}}.\vlinf{}{}{\bar a_n}{\fff}]
+  )
+ )
+}\quad,
 \]
 \end{proof}
 
