--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -20,7 +20,7 @@
    \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
    \atomicflow{(0,0)*{\afawu{}{}{}{}{}{}}}$}
 
-\TODO{Justify the following definitions in terms of `super-paths'.}
+\TODO{Justify the following definitions in terms of `super-paths'. Redefine weak streamlining.}
 
 %---------------------------------------
 \begin{definition}
