--- a/flows.tex
+++ b/flows.tex
@@ -122,8 +122,6 @@ Given an atomic flow $\phi$, we say that the sets $L_\top=\{\epsilon_1,\dots,\ep
 
 \TODO{Clean out old stuff from the following sub section.}
 
-\newpage
-
 \begin{definition}
 Given two atomic flows $\phi$ and $\psi$, we say that \emph{$\phi$ is a copy of $\psi$} if $\phi$ and $\psi$ are isomorphic and we have chosen a bijection between their edges. If $\phi$ is a copy of $\psi$ and $f$ is the bijection between their edges, we give $\phi$ and $\psi$ the same label and if $\epsilon$ is an edge of $\phi$ then we label $f(\epsilon)$ by $\hat\epsilon$, $\tilde\epsilon$ or $\epsilon^1$, $\epsilon^2$, $\dots$.
 \end{definition}
@@ -221,10 +219,8 @@ Note that the above atomic flow contains redundant information and the following
 \]
 \end{example}
 
-\newpage
-
 %=======================================
-\subsection{Paths and Cycles}
+\section{Paths and Cycles}
 
 We now define the notions of `$\ai$-path' and `$\ai$-cycle' in atomic flows. Paths are sequences of adjacent edges that only `go down' or only `go up'; $\ai$-paths are formed by joining paths at interaction or cointeraction vertices; $\ai$-cycles are circular $\ai$-paths. We also define the notion of `simple edge', \emph{i.e.}, an edge connecting an interaction and a cointeraction, as in the first diagram in this paper.
 
