--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -238,16 +238,30 @@ A streamlined proof is cut-free, a super streamlined proof is analytic and a hyp
 
 \TODO{Give the following derivation a name.}
 
-\begin{lemma}\label{LemDecompInt}
-Given a derivation $\vlder{}{}{\beta}{\alpha}$ with associated atomic flow $\phi$, there exists a derivation
+\begin{definition}\label{DefDecompInt}
+Given two derivations
 \[
-\vlder{}{\SKS\setminus\{\aid,\aiu\}}{\vlsbr[\beta\;.\;\vlinf{}{}{\fff}{\vls(b_m.\bar b_m)}\;.\;\cdots\;.\;\vlinf{}{}{\fff}{\vls(b_1.\bar b_1)}]}{\vlsbr(\vlinf{}{}{\vls[a_1.\bar a_1]}{\ttt}\;.\;\cdots\;.\;\vlinf{}{}{\vls[a_n.\bar a_n]}{\ttt}\;.\;\alpha)}
+\vlder{\Phi}{}{\beta}{\alpha}
+\quad\mbox{and}\quad
+\Psi\;=\;
+\vlder{\Psi'}{\SKS\setminus\{\aid,\aiu\}}
+{
+ \vlsbr[\beta\;.\;\vlinf{}{}{\fff}{\vls(b_m.\bar b_m)}\;.\;\cdots\;.\;\vlinf{}{}{\fff}{\vls(b_1.\bar b_1)}]
+}
+{
+ \vlsbr(\vlinf{}{}{\vls[a_1.\bar a_1]}{\ttt}\;.\;\cdots\;.\;\vlinf{}{}{\vls[a_n.\bar a_n]}{\ttt}\;.\;\alpha)
+}\quad,
 \]
-with associated atomic flow $\phi$, for some atoms $a_1,\dots,a_n,b_1,\dots,b_m$.
-\end{lemma}
+for some atoms $a_1,\dots,a_n,b_1,\dots,b_m$, such that $\Phi$ and $\Psi$ have the same atomic flow, we say that $\Psi$ is an \emph{$\ai$-decomposed normal form of\/ $\Phi$}, and $\Psi'$ is an \emph{$\ai$-free normal form of\/ $\Phi$}.
+\end{definition}
 
+\TODO{Is it ok that the theorem does not mention the induced $\ai$-free-normal form}
+
+\begin{theorem}\label{ThmConstrDecomp}
+Given a derivation $\Phi$, an $\ai$-decomposed normal form of\/ $\Phi$ can be constructed.
+\end{theorem}
 \begin{proof}
-Using Lemma~\ref{LemSuperSwitch} apply the following transformations to each of the identity and cut instances in $\Phi$:
+Using Lemma~\ref{LemSuperSwitch} apply, from top-to-bottom and left-to-right, the following transformations to each of the identity and cut instances in $\Phi$:
 \[
 \vlderivation
 {
@@ -288,13 +302,17 @@ Using Lemma~\ref{LemSuperSwitch} apply the following transformations to each of 
    \vlhy{\alpha}
   }
  }
-}\quad.
+}\quad
 \]
+to obtain an $\ai$-decomposed normal form of $\Phi$.
 \end{proof}
 
+\begin{definition}
+Given a derivation $\Phi$, the $\ai$-decomposed (resp., $\ai$-free) normal form of $\Phi$ obtained as described in the proof of Theorem~\ref{ThmConstrDecomp} is called \emph{the $\ai$-decomposed} (resp., \emph{$\ai$-free}) \emph{normal form of\/ $\Phi$}.
+\end{definition}
 
 \begin{definition}\label{DefDerCore}
-A derivation $\vlder{\Phi}{}{\beta}{\alpha}$ with associated atomic flow $\phi$, such that $\phi_1$, $\dots$, $\phi_n$ are all the non-weakly-streamlined, connected subflows of $\phi$, a \emph{core of\/ $\Phi$} is defined to be a derivation
+Given a derivation $\vlder{\Phi}{}{\beta}{\alpha}$ with associated atomic flow $\phi$, such that $\phi_1$, $\dots$, $\phi_n$ are all the non-weakly-streamlined, connected subflows of $\phi$, a \emph{core of\/ $\Phi$} is defined to be a derivation
 \[
 \vlder{}{}{\vls[\beta.(a^{\mu'_n}_n.{\bar a^{\mu''_n}_n}).\cdots.(a^{\mu'_1}_1.{\bar a^{\mu'_1}_1})]}{\vls([a^{\lambda'_1}_1.{\bar a^{\lambda''_1}_1}].\cdots.[a^{\lambda'_n}_n.{\bar a^{\lambda'_n}_n}].\alpha)}
 \]
