Removed redundant ams packages

--- a/thesis.tex
+++ b/thesis.tex
@@ -5,7 +5,7 @@
 
 %\usepackage{makeidx}
 \usepackage{fancyhdr}
-\usepackage{amsfonts,amsmath,amssymb,amsthm}
+\usepackage{amsmath,amsthm}
 \usepackage[lutzsyntax]{virginialake}\aftrianglefalse
 \usepackage[urw-garamond]{mathdesign} % Comment this to use Times fonts
   \expandafter\ifx\csname leqslant\endcsname\relax\usepackage{txfonts}\fi
