--- a/defs.tex
+++ b/defs.tex
@@ -42,3 +42,6 @@
 \newcommand{\gwu}{{\weaken{\uparrow}}}
 \newcommand{\gwd}{{\weaken{\uparrow}}}
 \newcommand{\KS}{\mathsf{KS}}
+
+%TODO: this is moved here to make the preview work
+\renewcommand{\th}[2]{\mathop{\thetaup_{#1}^{#2}}}
