--- a/flows.tex
+++ b/flows.tex
@@ -123,28 +123,9 @@ Given an atomic flow $\phi$, we say that the sets $L_\top=\{\epsilon_1,\dots,\ep
 \TODO{Clean out old stuff from the following sub section.}
 
 \begin{definition}
-Given two atomic flows $\phi$ and $\psi$, we say that \emph{$\phi$ is a copy of $\psi$} if $\phi$ and $\psi$ are isomorphic and we have chosen a bijection between their edges. If $\phi$ is a copy of $\psi$ and $f$ is the bijection between their edges, we give $\phi$ and $\psi$ the same label and if $\epsilon$ is an edge of $\phi$ then we label $f(\epsilon)$ by $\hat\epsilon$, $\tilde\epsilon$ or $\epsilon^1$, $\epsilon^2$, $\dots$.
+By giving two atomic flows the same label we indicated that there is a bijection between them.
+Given two atomic flows $\phi$ and $\psi$, a bijection $f$ between them and the edge $\epsilon$ in $\phi$, by labeling an edge in $\psi$ by $\hat\epsilon$ (resp., $\tilde\epsilon$ or $\epsilon^1$, $\epsilon^2$, $\dots$) we indicate that $f(\epsilon)=\hat\epsilon$ (resp., $f(\epsilon)=\tilde\epsilon$ or $f(\epsilon)=\epsilon^1$, $f(\epsilon)=\epsilon^2$, $\dots$).
 \end{definition}
-
-\begin{definition}
-Given two atomic flows $\phi$ and $\psi$, such that
-\begin{itemize}
-  \item $\psi$ contains $n\ge1$ copies of $\phi$,
-  \item $f_1$, $\dots$, $f_n$ are the bijections, restricted to the upper (resp., lower) edges, from $\phi$ to each of its copies,
-  \item $\epsilon$, $\epsilon_1$, $\dots$, $\epsilon_m$ are the upper (resp., lower) edges of $\psi$, and
-  \item $\epsilon'$ is an upper (resp., lower) edge of $\phi$,
-\end{itemize}
-then we say that \emph{$\epsilon$ corresponds to $\epsilon'$} if, for every $1\le i\le n$,
-\begin{itemize}
-  \item there is a path from $\epsilon'$ to $f_i(\epsilon)$, and
-  \item for every $1\le j \le m$, there is no path form $\epsilon'$ to $f_i(\epsilon_j)$.
-\end{itemize}
-Whenever we give the same name, $\epsilon$, to two edges in different atomic flows, $\phi$ and $\psi$ we mean that $\epsilon$ in $\psi$ corresponds to $\epsilon$ in $\phi$.
-\end{definition}
-
-\begin{remark}
-If $\epsilon$ in $\phi$ corresponds to $\epsilon'$ in $\psi$ it is not a problem to refer to them by the same name since they belong to different atomic flows and since $\epsilon$ can at most correspond to one edge in $\psi$.
-\end{remark}
 
 \begin{example}
 Consider the following atomic flow:
@@ -162,13 +143,14 @@ Consider the following atomic flow:
 "A"+( 2,-6)*{\afvjd4{}{\iota_m}};
 }\quad.
 \]
-We now build a flow containing two copies of $\phi$ where we indicate both the correspondence between upper (reps., lower) edges of $\phi$ and the new flow, and the bijections between the upper (resp., lower) edges of $\phi$ and each of its copies:
+We now build a flow $\psi$ containing two flows that are isomorphic to $\phi$ where we indicate the isomorphism restricted to the upper (resp., lower) edges by adding decorations to the original labels:
 \[
+\psi\quad=\quad
 \atomicflow
 {
-(-2,12)*{\afacuex{}{}{}{}{\epsilon_1}{}52};
+(-2,12)*{\afacuex{}{}{}{}{}{}52};
 ( 0,14)*{\cdots};
-( 2,12)*{\afacuex{}{}{}{}{}{\epsilon_n}52};
+( 2,12)*{\afacuex{}{}{}{}{}{}52};
 %
 (-5,0)="A";
 "A"+(-2, 6)*{\afvju4{\hat\epsilon_1}{}};
@@ -190,12 +172,14 @@ We now build a flow containing two copies of $\phi$ where we indicate both the c
 "A"+( 0,-6)*{\cdots};
 "A"+( 2,-6)*{\afvjd4{}{\tilde\iota_m}};
 %
-(-2,-12)*{\afacdex{}{}{}{}{\iota_1}{}52};
+(-2,-12)*{\afacdex{}{}{}{}{}{}52};
 ( 0,-14)*{\cdots};
-( 2,-12)*{\afacdex{}{}{}{}{}{\iota_n}52};
+( 2,-12)*{\afacdex{}{}{}{}{}{}52};
 }\quad.
 \]
-Note that the above atomic flow contains redundant information and the following atomic flow is indeed unique modulo isomorphism:
+Note that when we compose flows in this way we only connect two edges $\hat\epsilon_i$ and $\tilde\epsilon_j$ (resp., $\hat\iota_i$ and $\tilde\iota_j$) by a cocontraction (resp., contraction) if $i=j$, in other words if $\hat\epsilon_i$ and $\tilde\epsilon_j$ (resp., $\hat\iota_i$ and $\tilde\iota_j$) are mapped to from the same edge in $\phi$ by the bijections between the flows.
+
+Labeling both $\hat\epsilon_i$ and $\tilde\epsilon_j$ (resp., $\hat\iota_i$ and $\tilde\iota_j$) is in other words redundant and for this reason we wish to introduce the following notation instead:
 \[
 \atomicflow
 {
@@ -229,6 +213,32 @@ Note that the above atomic flow contains redundant information and the following
 }\quad.
 \]
 \end{example}
+
+
+\TODO{We don't specify that we are talking about a specific bijection. Does it matter?}
+
+\TODO{There might be more isomorphic subflows than the ones we mentioned, that would be bad. We need a way of saying which ones we care about. This was the use of the term `copy' and it is accomplished by giving them the same name.}
+
+\begin{definition}
+Given two atomic flows $\phi$ and $\psi$, such that
+\begin{itemize}
+  \item $\psi$ contains the subflows $\phi_1$, $\dots$, $\phi_n$, each of which is isomorphic to $\phi$,
+  \item $f_1$, $\dots$, $f_n$ are bijections from $\phi$ to $\phi_1$, $\dots$, $\phi_n$, respectively,
+  \item $\epsilon$, $\epsilon_1$, $\dots$, $\epsilon_m$ are the upper (resp., lower) edges of $\phi$, and
+  \item $\epsilon'$ is an upper (resp., lower) edge of $\psi$,
+\end{itemize}
+then we say that \emph{$\epsilon$ corresponds to $\epsilon'$} if, for every $1\le i\le n$,
+\begin{itemize}
+  \item there is a path from $\epsilon'$ to $f_i(\epsilon)$, and
+  \item for every $1\le j \le m$, there is no path form $\epsilon'$ to $f_i(\epsilon_j)$.
+\end{itemize}
+Whenever we give the same name, $\epsilon$, to two edges in different atomic flows, $\phi$ and $\psi$ we mean that $\epsilon$ in $\psi$ corresponds to $\epsilon$ in $\phi$.
+\end{definition}
+
+\begin{remark}
+If $\epsilon$ in $\phi$ corresponds to $\epsilon'$ in $\psi$ it is not a problem to refer to them by the same name since they belong to different atomic flows and since $\epsilon$ can at most correspond to one edge in $\psi$.
+\end{remark}
+
 
 %=======================================
 \section{Paths and Cycles}
